--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -25,4 +25,9 @@
   <input type="submit" value="Submit">
 </form> 
 </body>
+<script>
+	<%if(err){%>
+		alert("<%=err%>")
+	<%}%>
+</script>
 </html>
