--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -20,7 +20,7 @@
   <input type="text" name="password" placeholder="Password">
   <br>
   Email:<br>
-  <input type="text" name="email" placeholder="Mouse">
+  <input type="text" name="email" placeholder="Email">
   <br><br>
   <input type="submit" value="Submit">
 </form> 
