--- a/views/landingpage.ejs
+++ b/views/landingpage.ejs
@@ -9,7 +9,7 @@
 
 						<h1>This is your <strong>Chance</strong>, To Expand Your Future<br/></h1>
 						</br>
-						<h1>GroupHub Connect Us</h1>
+						<h1  style="font-family: 'Gloria Hallelujah', cursive;">GroupHub Connect Us</h1>
 						<ul class="icons">
 							<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
@@ -21,7 +21,7 @@
 
 				<!-- Main -->
 					<section id="main">
-
+							<h4 style="font-size:4em">Upcoming Events</h4>
 						<!-- Thumbnails -->
 							<section class="thumbnails">
 								<div>
@@ -70,10 +70,10 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="../js/jquery.min.js"></script>
+			<script src="../js/jquery.poptrox.min.js"></script>
+			<script src="../js/skel.min.js"></script>
+			<script src="../js/main.js"></script>
 
 	</body>
 </html>
