--- a/views/groups/groups.ejs
+++ b/views/groups/groups.ejs
@@ -2,8 +2,8 @@
 
 
 
+<a  href="/groups/addNewGroup"><button style="margin-bottom: 10px" type="button" name="button">Create New Group</button></a>
 <% dataGroups.forEach(item => { %>
-
 
 <div class="container group">
   <div class="grid-1-5">
