--- a/views/landingpage.ejs
+++ b/views/landingpage.ejs
@@ -9,7 +9,7 @@
 
 						<h1>This is your <strong>Chance</strong>, To Expand Your Future<br/></h1>
 						</br>
-						<h1  style="font-family: 'Gloria Hallelujah', cursive;">GroupHub Connect Us</h1>
+						<h1  style="font-family: 'Gloria Hallelujah', cursive;">EventHub Connect Us</h1>
 						<ul class="icons">
 							<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
