--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -16,10 +16,10 @@
 <nav class="navbar">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a style="font-family: 'Gloria Hallelujah', cursive;" class="navbar-brand" href="#">GroupHub</a>
+      <a style="font-family: 'Gloria Hallelujah', cursive;" class="navbar-brand" href="/">EventHub</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
+
       <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="#">Page 1-1</a></li>
@@ -27,7 +27,7 @@
           <li><a href="#">Page 1-3</a></li>
         </ul>
       </li>
-      <li><a href="#">Page 2</a></li>
+      <li><a href="/groups">Group</a></li>
       <%if(login){%>
         <li><a href="#">My Groups</a></li>
       <%}%>
