--- a/views/groups/joinedgroup.ejs
+++ b/views/groups/joinedgroup.ejs
@@ -3,7 +3,7 @@
 <h1>joinedgroup</h1>
 
 
-<a  href="/groups/addNewGroup"><button style="margin-bottom: 10px" type="button" name="button">Create New Group</button></a>
+<a  href="/groups/addNewGroup"><button style="margin-bottom: 10px, margin-left:20px" type="button" name="button">Create New Group</button></a>
 
 <% dataGroups.Groups.forEach(item => { %>
 <% if(item.UserGroup.role != 'admin') { %>
