--- a/views/groups/mygroup.ejs
+++ b/views/groups/mygroup.ejs
@@ -2,7 +2,8 @@
 
 
 
-<a  href="/groups/addNewGroup"><button style="margin-bottom: 10px" type="button" name="button">Create New Group</button></a>
+<a  href="/groups/addNewGroup"><button style="margin-bottom: 50px" type="button" name="button">Create New Group</button></a>
+<a  href="/groups/editgroup"><button style="margin-bottom: 50px" type="button" name="button">Edit</button></a>
 <% dataGroups.Groups.forEach(item => { %>
 
 
