--- a/views/groups/joinedgroup.ejs
+++ b/views/groups/joinedgroup.ejs
@@ -17,7 +17,7 @@
         <li>Lorem ipsum dolor sit amet, consectetur </li>
         <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor i</li>
       </ul>
-      <a href="#" class="button">Join</a>
+      <a href="/groups/unfollow/<%=item.id%>" class="button">unfollow</a>
     </div>
   </div>
 
