--- a/public/css/groups.css
+++ b/public/css/groups.css
@@ -32,6 +32,41 @@ body{
   display: table;
   clear: both;
 }
+
+.select {
+  margin-left: 30px;
+  margin-bottom: 50px;
+
+}
+
+.container-edit {
+  margin-left: 300px
+}
+
+.btn-delete {
+  background-color:  #9c83aa;
+  width : 60px;
+  border-radius: 2px;
+}
+
+#form-edit {
+  padding-right: 50px;
+}
+#boxinput {
+  width: 50%
+}
+
+#selectbox {
+  width: 20%;
+  color: red;
+  margin-bottom: 20px
+}
+
+.valuebox {
+  color: black;
+  font-weight: bold;
+  margin-left: 400px
+}
 .grid-1-5 {
   border: 2px solid #5d4e65;
   min-height: 400px;
