--- a/views/groups/mygroup.ejs
+++ b/views/groups/mygroup.ejs
@@ -1,9 +1,10 @@
 <%include ../partials/navbar.ejs%>
 
+<div class="select">
+<h1>My Group</h1>
 
-
-<a  href="/groups/addNewGroup"><button style="margin-bottom: 50px" type="button" name="button">Create New Group</button></a>
-<a  href="/groups/editgroup"><button style="margin-bottom: 50px" type="button" name="button">Edit</button></a>
+    <a  href="/groups/addnewgroup"><button type="button" name="button">Create New Group</button></a>
+  </div>
 <% dataGroups.Groups.forEach(item => { %>
 
 
@@ -20,10 +21,12 @@
       <li>Lorem ipsum dolor sit amet, consectetur </li>
       <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor i</li>
     </ul>
-    <a href="#" class="button">Join</a>
+    <a href="/groups/editgroup/<%=item.id%>" class="button">Edit</a>
+
   </div>
 
 
 </div>
+
 <% } %>
 <% })  %>
