--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -23,14 +23,6 @@
       <a style="font-family: 'Gloria Hallelujah', cursive;" class="navbar-brand" href="/">EventHub</a>
     </div>
     <ul class="nav navbar-nav">
-
-      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Page 1-1</a></li>
-          <li><a href="#">Page 1-2</a></li>
-          <li><a href="#">Page 1-3</a></li>
-        </ul>
-      </li>
       <li><a href="/groups">Group</a></li>
       <%if(login){%>
 
@@ -40,6 +32,7 @@
           <li><a href="/groups/joinedgroup">Joined Group</a></li>
 
         </ul>
+        <li><a href="/event">Events</a></li>
       </li>
       <%}%>
     </ul>
